# api-directory

./: .gitignore  .gitmodules  Cargo.toml  README.md
scripts/: generate-certs.sh  test.sh
src/: database.rs  errors.rs  main.rs  proxy.rs  secconf.rs  services.rs  tlsconf.rs
src/api_services/: db.rs  errors.rs  mod.rs  models.rs  repo.rs  rest.rs  web.rs
src/auth/: errors.rs  mod.rs  models.rs  repo.rs  rest.rs  web.rs
src/forwarder/: mod.rs
src/gw_api_services/: errors.rs  repo.rs  rest.rs
src/gw_proxy/: mod.rs
src/gw_users/: errors.rs  models.rs  repo.rs
src/services/: rest_interface.rs  types.rs
src/users/: errors.rs  mod.rs  models.rs  repo.rs  rest.rs  web.rs
