[package]
name = "api-directory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
env_logger = "0.10.2"
futures-util = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.20"
reqwest = "0.11.23"
serde = {version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
