[package]
name = "api-directory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
async-trait = "0.1.77"
env_logger = "0.10.2"
futures-util = "0.3.30"
log = "0.4.20"
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
surrealdb = { version = "1.1.1", features = ["kv-speedb"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.16.1", features = ["derive"] }
